2007-07-04  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_loginuid.c: New.
	* src/pam-config.c: Add support for single login files.
	* src/single_config.c: New file.

2007-07-03  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_pkcs11.c: New.

2007-07-02  Thorsten Kukuk  <kukuk@suse.de>

	* src/write_config.c: New file, combine all old 4 variants.

	* src/Makefile.am: Add mod_pam_apparmor and mod_pam_nam
	* src/supported-modules.h: Likewise.
	* src/mod_pam_apparmor.c: New.
	* src/mod_pam_nam.c: New.
	* src/pam-config.c (main): Convert entries.

	* src/Makefile.am: Add mod_pam_krb5.
	* src/supported-modules.h: Likewise.
	* src/mod_pam_cracklib.c: New.
	* src/pam-config.c (main): Convert pam_krb5 entries.

	* src/mod_pam_krb5.c: New.
	* src/pam-config.c (main): Convert pam_krb5 entries.
	* src/Makefile.am: Add mod_pam_krb5.
	* src/supported-modules.h: Add mod_pam_krb5.

	* src/mod_pam_localuser.c: Implement write function.

	* src/load_obsolete_conf.c: Convert for new interface.

	* src/pam-config.c (main): Convert pam_limits entries.
	* src/mod-pam_limits.c: new.

2007-06-29  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_env.c: New.
	* src/pam-config.8.xml: Document new pam_nev options.
	* src/pam-config.c (main): Add new pam_env options.

	* src/mod_pam_pwcheck.c: New.
	* src/pam-config.8.xml: Document enforce_for_root option.
	* src/pam-config.c (main): Convert pwcheck options.

	* src/pam-module.h: Add more defines for more options.

	* src/mod_pam_localuser.c: New.

	* src/mod_pam_winbind.c: New.
	* src/supported-modules.h: Add mod_pam_winbind.
	* src/pam-config.c (main): Convert winbind options.
	* src/Makefile.am: Add mod_pam_winbind.c.

	* src/pam-config.c (main): Add --umask-umask option.
	* src/pam-config.8.xml: Document --umask-umask option.
	* src/mod_pam_umask.c: Support umask option.

	* src/pam-module.h (DECLARE_STRING_OPTS_2): Added.

	* src/pam-config.c (main): Support umask and skel for pam_mkhomedir.
	* src/mod_pam_mkhomedir.c: Likewise.
