@@ -25,7 +25,7 @@ pam_config_SOURCES = pam-config.c load_config.c write_config.c \
 	mod_pam_localuser.c mod_pam_env.c mod_pam_limits.c mod_pam_krb5.c \
 	mod_pam_cracklib.c mod_pam_apparmor.c mod_pam_nam.c mod_pam_pkcs11.c \
 	mod_pam_make.c \
-	single_config.c mod_pam_loginuid.c
+	single_config.c mod_pam_loginuid.c mod_pam_unix.c
 
 noinst_HEADERS = pam-config.h
 
