@@ -47,5 +47,6 @@ int sanitize_check_auth (pam_module_t **module_list);
 int sanitize_check_password (pam_module_t **module_list);
 int sanitize_check_session (pam_module_t **module_list);
 int check_for_pam_module (const char *name, int force);
+int check_for_unix_conflict (pam_module_t **module_list, write_type_t op);
 
 #endif
