@@ -1,3 +1,12 @@
+2007-07-04  Sven Schober <sschober@suse.de>
+
+	* src/mod_pam_unix.c: New. 
+	* src/sanity_checks.c: Added check for pam_unix/2-conflict
+	and fallback to pam_unix2.so.
+	* src/pam-config.c: Added options for pam_unix.so.
+	* src/supported-modules.h: Added pam_unix.so to
+	module-lists.
+
 2007-07-04  Thorsten Kukuk  <kukuk@suse.de>
 
 	* src/mod_pam_loginuid.c: New.
